fix for headlines on mobile

--- a/src/styles/components/splash.styl
+++ b/src/styles/components/splash.styl
@@ -23,7 +23,7 @@
     transition opacity 1s ease
 
   &__headline
-    position absolute
+    position fixed
     opacity 0
     text-align center
     right 0
@@ -155,6 +155,7 @@ form
   .splash
 
     &__headline
+      position absolute
       h1, .h1
         font-size 85px
 
